// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER><BACK 3> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [
      "",
      "",
    ],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 0,
    "y": 2,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER><BACK 3> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER><BACK 3> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER><BACK 5> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 0,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER><BACK 5> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER><BACK 5> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER>ArrowUpArrowUpArrowUp 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [
      "",
      "",
      "",
    ],
    "BUFFER_PRE": [
      "",
      "",
    ],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 0,
    "y": 2,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER>ArrowUpArrowUpArrowUp 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER>ArrowUpArrowUpArrowUp 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER>ArrowUpArrowUpArrowUpArrowUpArrowUp 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [
      "",
      "",
      "",
      "",
      "",
    ],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 0,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER>ArrowUpArrowUpArrowUpArrowUpArrowUp 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>i<ENTER><ENTER><ENTER><ENTER><ENTER>ArrowUpArrowUpArrowUpArrowUpArrowUp 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello world<LEFT 5><ENTER> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [
      "hello ",
    ],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": false,
      "POSTCARET": "world",
      "PRECARET": "",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 0,
    "y": 1,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello world<LEFT 5><ENTER> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello world<LEFT 5><ENTER> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello world\`:q!<ENTER> 1`] = `
{
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "DOWN_MAPPING": [Function],
  "HISTORY_INDEX": -1,
  "NAME": 0,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello world\`:q!<ENTER> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello world\`:q!<ENTER> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello world\`:q<ENTER> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "d",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hello worl",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 10,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": "No write since last change",
  "MODE": 2,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello world\`:q<ENTER> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello world\`:q<ENTER> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello world\`:w out<ENTER>\`:q<ENTER> 1`] = `
{
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "DOWN_MAPPING": [Function],
  "HISTORY_INDEX": -1,
  "NAME": 0,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello world\`:w out<ENTER>\`:q<ENTER> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":"","out":"hello world"},"root":{}}}"`;

exports[`vi<ENTER>ihello world\`:w out<ENTER>\`:q<ENTER> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello world\`:w<ENTER> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "d",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hello worl",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 10,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": "No file name",
  "MODE": 0,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello world\`:w<ENTER> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello world\`:w<ENTER> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello world\`:wq<ENTER> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "d",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hello worl",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 10,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": "No write since last change",
  "MODE": 2,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello world\`:wq<ENTER> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello world\`:wq<ENTER> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [
      "hello world",
    ],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": false,
      "POSTCARET": " world",
      "PRECARET": "",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 0,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\` 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "o",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hell",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 4,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 0,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\` 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\` 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\`:cmd 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "o",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hell",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "cmd",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 4,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 2,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\`:cmd 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\`:cmd 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "o",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hell",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "cmd",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 4,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MESSAGE": null,
  "MODE": 2,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "REGISTERS": {},
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;
